[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug", "std"] }
ash-window = "0.13.0"
glam = { version = "0.29.2", features = ["mint", "serde"] }
env_logger = "0.11.5"
log = "0.4.22"
mint = "0.5.9"
winit = { version = "0.30.5", features = ["rwh_06"] }
imgui-rs-vulkan-renderer = { version = "1.16", features = ["vk-mem"] }
imgui-winit-support = "0.13.0"
imgui = "0.12"
vk-mem = "0.4.0"
image = "0.25.5"
serde = { version = "1.0.216", features = ["derive"] }
serde-binary = "0.5.0"
